experimental/ir/testdata/syntax/1999.proto.stderr.txt
error: unrecognized `edition` declaration value
  --> testdata/syntax/1999.proto:16:11
   |
16 | edition = "1999";
   |           ^^^^^^
   = note: treating the file as Edition 2023 instead
   = help: permitted values: "2023", "2024"

encountered 1 error
